@@ -11,7 +11,7 @@ body {
 }
 
 #rating-box {
-    height: 350px;
+    height: 300px;
     width: 100%;
     background: #9c004b;
     color: #ffffff;
