@@ -119,7 +119,8 @@
         </div>
     </div>
     <div id="font-modal" class="reveal-modal font-image-color-box" data-reveal aria-hidden="true" role="dialog">
-        <a href="#" class="button info radius tiny"><i class="fi-arrows-in"></i> </a>
+        <a href="#" id="font-modal-minimize" class="button success radius tiny"><i class="fi-arrows-in"></i>
+            Minimize</a>
 
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 
@@ -161,7 +162,10 @@
 
     </div>
     <div id="image-modal" class="reveal-modal font-image-color-box" data-reveal aria-hidden="true" role="dialog">
-        <a href="#" class="button info radius tiny"><i class="fi-arrows-in"></i> </a>
+        <a href="#" id="image-modal-minimize" class="button success radius tiny"><i class="fi-arrows-in"></i>
+            Minimize</a>
+
+
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
         <h4>Tell us what you didn't like about the Images!</h4>
 
@@ -194,11 +198,8 @@
     <div id="color-modal" class="reveal-modal font-image-color-box" data-reveal aria-labelledby="you bad rated font"
          aria-hidden="true"
          role="dialog">
-        <h4>Tell us what you didn't like about the Color!</h4>
-
-        <a href="#" class="arrow-in-button button info radius tiny"><i class="fi-arrows-in"></i> </a>
-
-
+        <a href="#" id="color-modal-minimize" class="button success radius tiny"><i class="fi-arrows-in"></i>
+            Minimize</a>
         <h4>Tell us what you didn't like about the Color!</h4>
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 
@@ -234,15 +235,25 @@
 
     </div>
     <div id="rating-box">
+
+        <div id="modal-button-box">
+            <img src="img/aet%20logo%20tranzparent.png" width="25%" height="25%" style="margin-right: 30px">
+            <a href="#" id="image-modal-show-button" class="success button radius tiny"><i class="fi-arrows-out"></i>
+                Maximize Image Modal</a>
+            <a href="#" id="color-modal-show-button" class="success button radius tiny"><i class="fi-arrows-out"></i>
+                Maximize Color Modal</a>
+            <a href="#" id="font-modal-show-button" class="success button radius tiny"><i class="fi-arrows-out"></i>
+                Maximize Font Modal</a>
+        </div>
+
+
         <h4 class="rate-header" id="rating-box-heading">Please rate these Characteristics:</h4>
         <a href="#" id="third-step-button" class="button alert finish-button" data-reveal-id="general-aesthetic-modal">Third
             Step</a>
 
-        <div class="row">
-            <div class="small-4 columns"><img src="img/aet%20logo%20tranzparent.png"></div>
-            <div class="small-8 columns"><h4>You can help to make a website better!</h4></div>
-        </div>
+
     </div>
+
 
     <div id="general-aesthetic-modal" class="reveal-modal" data-reveal
          data-options="close_on_background_click:false;close_on_esc:false;">
@@ -432,5 +443,7 @@
 <button id="hide-rating-box-button" class="hide-show-button">
     Hide
 </button>
+
+
 </body>
 </html>
