@@ -5,3 +5,4 @@
  - geklickte eigenschaften werden grün angezeigt
  - fadeIn/out pfeil zeiger
  - merkmal buttons style, ratingbox bgcolor, thirdbutton show hide
+ - modal minimieren möglich
